--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-spring.application.name=product-service
-
-spring.datasource.url=jdbc:h2:mem:product-db
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
 spring.datasource.username=root
 spring.datasource.password=root
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
-spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
