--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=order-service
-spring.datasource.url=jdbc:h2:mem:orderdb;
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservice
 spring.datasource.username=root
 spring.datasource.password=root
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-server.port=8081;
+server.port = 8081
+
